grafana/overlays/jed/patch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
            - mountPath: /etc/grafana
              name: grafana-config
            - mountPath: /etc/grafana/provisioning/datasources
              name: datasource-prometheus
            - mountPath: /etc/grafana/provisioning/dashboards
              name: provider-cilium
            - mountPath: /etc/grafana/dashboards/cilium-dashboard
              name: cilium-dashboard
              readOnly: true
            - mountPath: /etc/grafana/dashboards/hubble-dashboard
              name: hubble-dashboard
              readOnly: true
          #  - mountPath: /etc/grafana/dashboards/hubble-l7-http-metrics-by-workload
          #    name: hubble-l7-http-metrics-by-workload
          #    readOnly: true
      volumes:
      - name: grafana-config
        configMap:
          defaultMode: 420
          name: grafana-config
      - name: datasource-prometheus
        configMap:
          defaultMode: 420
          name: datasource-prometheus
      - name: provider-cilium
        configMap:
          defaultMode: 420
          name: provider-cilium
      - name: cilium-dashboard
        configMap:
          defaultMode: 420
          name: grafana-cilium-dashboard
      - name: hubble-dashboard
        configMap:
          defaultMode: 420
          name: grafana-hubble-dashboard
      #- name: hubble-l7-http-metrics-by-workload
      #  configMap:
      #    defaultMode: 420
      #    name: hubble-l7-http-metrics-by-workload
  volumeClaimTemplates:
  - metadata:
      name: grafana-pv
    spec:
      accessModes: ["ReadWriteMany"]
      storageClassName: "longhorn-xfs"
      resources:
        requests:
          storage: 10Gi
